# helm

./: .gitignore  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  README.md  ROADMAP.md  index.html  package-lock.json  package.json  playwright.config.ts  vite.config.ts  wrangler.toml
.do/: app.yaml
.github/workflows/: ci.yml
docs/: DEPLOY.md  TAURI.md
docs/adr/: 0001-ship-as-pwa-defer-native-installers.md
e2e/: clients.spec.ts  smoke.spec.ts
public/: _redirects
src/: App.tsx  index.css  main.tsx
src-tauri/: .gitignore  Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: .gitkeep  icon.icns
src-tauri/src/: lib.rs  main.rs
src/components/__tests__/: pdf-render.test.tsx
src/components/clients/: ClientForm.tsx
src/components/command/: CommandPalette.tsx
src/components/documents/: DocumentPDF.tsx  GenerateDocModal.tsx
src/components/ui/: Badge.tsx  (+18 more)
src/db/: encryption.ts  index.ts
src/hooks/: useFocusTrap.ts  useIsMobile.ts  useMentionItems.ts  usePdfDownload.ts  useToast.ts
src/pages/: ClientDetail.tsx  Clients.tsx  Dashboard.tsx  DocumentEditor.tsx  Documents.tsx  ErrorPage.tsx  Expenses.tsx  InvoiceDetail.tsx  InvoiceForm.tsx  Invoices.tsx  Projects.tsx  ProposalDetail.tsx  ProposalForm.tsx  Proposals.tsx  Settings.tsx  Time.tsx  Toolbox.tsx
src/test/: setup.ts
src/types/: index.ts
src/utils/: backup.ts  caret.ts  crypto.ts  dashboard.ts  date.ts  format.ts  github.ts  image.ts  invoice.ts  links.ts  markdownPdf.tsx  pdf.ts  phone.ts  retainer.ts  sampleData.ts  savePdf.ts  template.ts  time.ts  vault.ts
(+46 files in other folders)
