[package]
name = "helm"
version = "0.1.0"
description = "Helm — a local-first operating system for an independent consulting practice"
authors = ["Brett Buskirk"]
edition = "2021"
rust-version = "1.77.2"

# The library the binary calls into. Keeping run() in a lib crate keeps the door
# open to a mobile target later without restructuring.
[lib]
name = "helm_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-opener = "2"
tauri-plugin-dialog = "2"
tauri-plugin-fs = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# Smaller, faster release binaries.
[profile.release]
panic = "abort"
codegen-units = 1
lto = true
opt-level = "s"
strip = true
